# BUAA-Compiler-2024

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  compress.sh  loop.ll  main.c  main.ll  main_O2.ll  note.md  test.cpp
libs/: CMakeLists.txt
libs/llvm/: CMakeLists.txt  Symbol.cpp  Symbol.hpp  codeGen.hpp  loopStack.cpp  loopStack.hpp
libs/llvm/IR/: Argument.cpp  Argument.hpp  BasicBlock.cpp  BasicBlock.hpp  Common.hpp  Constant.cpp  Constant.hpp  ConstantData.cpp  ConstantData.hpp  Function.cpp  Function.hpp  GlobalString.cpp  GlobalString.hpp  GlobalValue.cpp  GlobalValue.hpp  GlobalVariable.cpp  GlobalVariable.hpp  IRPrinter.hpp  Instruction.cpp  Instruction.hpp  Instructions.cpp  Instructions.hpp  LLVMContext.cpp  LLVMContext.hpp  Module.cpp  Module.hpp  Type.cpp  Type.hpp  Use.cpp  Use.hpp  User.cpp  User.hpp  Value.cpp  Value.hpp
libs/mips/: Asm.hpp  CMakeLists.txt  ConflictGraph.cpp  ConflictGraph.hpp  Controller.hpp  Imm.cpp  Imm.hpp  Insts.cpp  Insts.hpp  MipsAsmGen.cpp  MipsAsmGen.hpp  MipsCommon.hpp  MipsData.cpp  MipsImm.cpp  MipsImm.hpp  MipsLabel.cpp  MipsLabel.hpp  MipsRegAllocator.cpp  MipsRegAllocator.hpp  MipsTranslator.cpp  MipsTranslator.hpp  Registers.hpp  Regs.cpp  Regs.hpp  SaveRegTable.cpp  SaveRegTable.hpp  Stack.cpp  Stack.hpp  StackSlot.cpp  StackSlot.hpp  TmpRegTable.cpp  TmpRegTable.hpp  VarLocation.cpp  VarLocation.hpp  VarTable.cpp  VarTable.hpp
libs/mips1/: CMakeLists.txt  MipsAsmGen.cpp  MipsCommon.hpp  MipsData.hpp  MipsImm.hpp  MipsLabel.hpp  MipsLocation.cpp  MipsLocation.hpp  MipsTranslator.cpp  MipsTranslator.hpp  Regs.cpp  Regs.hpp  VarTable.cpp  VarTable.hpp
libs/tang/: Ast.cpp  Ast.hpp  CMakeLists.txt  ErrorReporter.cpp  ErrorReporter.hpp  Evaluate.cpp  LLVMVisitor.cpp  Lexer.cpp  Lexer.hpp  LoopStack.hpp  Parser1.cpp  Parser1.hpp  Symbol.cpp  Symbol.hpp  Symbol1.cpp  Symbol1.hpp  Token.cpp  Visitor.cpp  Visitor.hpp  ast.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  loopStack.hpp  parser.cpp  parser.hpp  parser1.cpp  parser1.hpp  symbol.cpp  symbol.hpp  token.cpp  token.hpp  visitor.cpp  visitor.hpp
libs/tang/include/tang/: lexer.h  lexer.hpp  token.h  token.hpp
libs/tang/src/: lexer.cpp  parser.cpp  token.cpp
report/: .gitignore  report.tex
report/images/: structure.drawio
src/: Node.cpp  expr.cpp  expr.hpp  lexer.cpp  lexer.hpp  main.cpp  node.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/include/: lexer.h  node.h  parser.h  token.h
src/libs/tang/: lexer.cpp
tests/: .gitignore  test.py  testfiles.json
tests/clangTestcases/: algorithmatic.c  algorithmatic.ll  array.c  array.ll  for.c  for.ll  function.c  function.ll  if.c  if.ll  ifFor.c  ifFor.ll  io.c  io.ll  simple.c  simple.ll  unary.c  unary.ll
tests/linkTest/: main.c
tests/src/: output1.txt  output2.txt  output4.txt  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt
thoughts/: .gitignore  thoughts.tex
